Update and rename SignUp.html to signUp.html

--- a/signUp.html
+++ b/signUp.html
@@ -12,11 +12,11 @@
         <nav class="topnav">
             <a href= "finalProject.html">
                 Home</a>
-            <a href= "H4Cfacts.html">
+            <a href= "facts.html">
                 Facts</a>
-            <a href= "H4CsiteMapping.html">
+            <a href= "siteMapping.html">
                 Site Mapping</a>
-            <a href= "H4CsignUp.html">
+            <a href= "signUp.html">
                 Sign Up</a>
             </nav>
 
